# HeaterControlApp

./: .gitignore
src/: CMakeLists.txt
src/firebaseHelloWorld/backend/: FirebaseClient.cpp  FirebaseClient.h  IRequest.h  Request.cpp  Request.h  RequestFactory.cpp  main.cpp
src/firebaseHelloWorld/client/: index.html
src/firebaseHelloWorld/client/css/: main.css
src/firebaseHelloWorld/client/js/: circular-slider.js  firebaseClient.js  main.js
